--- a/style.css
+++ b/style.css
@@ -405,8 +405,27 @@ nav {
     font-size: 0.8rem;
     color: var(--accent-color);
     opacity: 0.8;
-    transform: rotate(-30deg);
-    bottom: 50px;
+    bottom: -30px;
+    right: 0;
+}
+
+.binary1 {
+    position: absolute;
+    font-family: monospace;
+    font-size: 0.8rem;
+    color: var(--accent-color);
+    opacity: 0.8;
+    bottom: -25px;
+    right: 0;
+}
+
+.binary2 {
+    position: absolute;
+    font-family: monospace;
+    font-size: 0.8rem;
+    color: var(--accent-color);
+    opacity: 0.8;
+    bottom: -20px;
     right: 0;
 }
 
